[package]
name = "deeplink-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sys-info = "0.9.1"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8.10"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14.28", features = ["full"] }
serde_urlencoded = "0.7"